Se agrega icono de twitter

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 			<a href="" class="redes-link github"></a>
 			<a href="" class="redes-link facebook"></a>
 			<a href="" class="redes-link instagram"></a>
-			<a href="" class="redes-link twitter"></a>
+			<a href="images/icono_twitter.png" class="redes-link twitter"></a>
 		</div>
 		</div>
 	</section>
