--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
 		</form>
 
 		<div class="redes">
-			<a href="" class="redes-link github"></a>
-			<a href="" class="redes-link facebook"></a>
+			<a href="" class="redes-link whatsapp"></a>
+			<a href="" class="redes-link linkedin"></a>
 			<a href="" class="redes-link instagram"></a>
-			<a href="images/icono_twitter.png" class="redes-link twitter"></a>
+			<a href="" class="redes-link twitter"></a>
 		</div>
 		</div>
 	</section>
