Actualizacion de hover en el menú y cambio de logo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Hola, Bienvenidos a mi portafolio donde podran encontrar todo sobre mi vida laboral y mi trayectoria liderando diferentes proyectos">
-	<title>Portfolio Lorena</title>
+	<title>Portafolio Javier Salas</title>
 	<link rel="shortcut icon" href="images/icono.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -15,7 +15,8 @@
 	<header class="header">
 		<div class="wrapper">
 		<figure>
-			<img src="images/icono.png" alt="Logo de git" width="50">
+			<p><a href="index.html"> Javier Salas</a></p>
+			<!-- <img src="images/icono.png" alt="Logo de git" width="50"> -->
 		</figure>
 		<nav class="menu">
 			<ul>
@@ -30,9 +31,9 @@
 	
 	<section class="main">
 		<div class="wrapper">
-		<h1> Hola, soy <span>Lorena Rojas</span> <br>
+		<h1> Hola, soy <span>Javier Salas</span> <br>
 			Desarrollador <span>apasionado</span> <br>
-			por el front end y la <span>web</span>
+			por el frontend y la <span>web</span>
 		</h1>
 		<figure>
 			<img src="images/main.jpg" alt="icono del slide">
